welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:3: error: value leveBrosse is not a member of Unit
def marquerSol {baisseBrosse() leveBrosse()}
                               ^PictureMono:4: error: value avance is not a member of Unit
def faireV {gauche()avance()marquerSol()droite()
                    ^PictureMono:5: error: value droite is not a member of Unit
             avance()droite()avance()marquerSol()
                     ^PictureMono:6: error: value avance is not a member of Unit
             gauche()avance()gauche()avance()
                     ^PictureMono:7: error: Unit does not take parameters
             marquerSol()droite()droite()avance()
                       ^PictureMono:8: error: value avance is not a member of Unit
             gauche()avance()avance()droite()}
                     ^PictureMono:11: error: not found: value faireV
	faireV();
        ^